<resources>
    <string name="app_name">Dziennik Ucznia</string>
    <string name="app_G">© Guzooo 2018 - 2020</string>
    <string name="app_v">v%1$s</string>
    <string name="edit_subject">Edytowanie Przedmiotu</string>
    <string name="lesson_plan_add">Dodawanie Planu Lekcji</string>
    <string name="lesson_plan_edit">Edycja Planu Lekcji</string>
    <string name="error_database">Błąd bazy danych</string>
    <string name="save">Zapisz</string>
    <string name="add">Dodaj</string>
    <string name="ok">Ok</string>
    <string name="cancel">Anuluj</string>
    <string name="null_string">Brak</string>
    <string name="you_are_sure">Jesteś pewny?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="menu_share">Udostępnij</string>
    <string name="subject_null_assessments">Brak ocen</string>
    <string name="subject_null_this_assessment">Nie znaleźiono tej oceny do usunięcia</string>
    <string name="main_null_subject">Nie masz jeszcze przedmiotów\nDotknij plusa w prawym dolnym rogu by dodać przedmiot</string>
    <string name="information_window_message_from_creator">Wiadomość od twórcy:</string>
    <string name="information_window_update">Aktualizuj</string>
    <string name="information_window_available_update">Dostępna aktualizacja</string>
    <string name="information_window_recommended_update">Zalecana aktualizacja</string>
    <string name="category_of_assessment_test">Sprawdzian</string>
    <string name="category_of_assessment_quiz">Kartkówka</string>
    <string name="category_of_assessment_answer">Odpowiedź</string>
    <string name="category_of_assessment_homework">Praca Domowa</string>
    <string name="category_of_assessment_default">Domyślna</string>
    <string name="hint_teacher">Wpisz nauczyciela przedmiotu</string>
    <string name="hint_unpreparedness">Wpisz liczbe nieprzygotowań</string>
    <string name="hint_description">Wpisz dowolne informacje</string>
    <string name="details_minus_unpreparedness">-1NP</string>
    <string name="edit_hint_name">Wpisz nazwę przedmiotu</string>
    <string name="edit_hint_unpreparedness">Wpisz liczbe nieprzygotowań</string>
    <string name="edit_hint_description">Wpisz dowolne informacje na temat przedmiotu</string>
    <string name="edit_current_assessment">Poprzednie oceny:</string>
    <string name="edit_edit_assessment">Aktualne oceny:</string>
    <string name="edit_delete_all_assessment">Wszystkie</string>
    <string name="edit_duplicate_subject">Powiel przedmiot</string>
    <string name="edit_duplicate_subject_made">Przedmiot został powielony</string>
    <string name="edit_delete_subject">Usuń przedmiot</string>
    <string name="note_action_pin">Przypnij notatke</string>
    <string name="notification_channel_note">Notatki</string>
    <string name="notification_channel_note_description">Przedmiotowe notatki, które użytkownik przypiął</string>
    <string name="plan_null_plan">Nie masz jeszcze planu lekcji\nDotknij plusa poniżej by dodać plan lekcji</string>
    <string name="statistics_select_semester">Wybierz semestr:</string>
    <string name="statistics_beta">Wciąż jest to wersja BETA więc zmiana semestru nie przywróci początkowej ilości nieprzygotowań</string>
    <string name="statistics_coming_soon">W tym miejscu wkrótce pojawią się informacje na temat ilości poszczególnych ocen, przedmioty z których średnia jest niewystarczająca oraz inne przydatne dane.\nJeśli masz jakieś ciekawe pomysły pisz! ⬇</string>
    <string name="setting_facebook">Sprawdź fanpage\nFacebook</string>
    <string name="setting_messenger">Zaproponuj zmiany\nMessenger</string>
    <string name="setting_to_six">Wpisz potrzebną średnią do uzyskania oceny 6</string>
    <string name="setting_to_five">Wpisz potrzebną średnią do uzyskania oceny 5</string>
    <string name="setting_to_four">Wpisz potrzebną średnią do uzyskania oceny 4</string>
    <string name="setting_to_three">Wpisz potrzebną średnią do uzyskania oceny 3</string>
    <string name="setting_to_two">Wpisz potrzebną średnią do uzyskania oceny 2</string>
    <string name="setting_to_belt">Wpisz potrzebną średnią do uzyskania paska</string>
    <string name="setting_end_day">Przestań pokazywań dzisiejsze przedmioty po:</string>
    <string name="setting">Ustawienia</string>
    <string name="home">Główna</string>
    <string name="statistics">Statystyki</string>
    <string name="lesson_plan">Plan Lekcji</string>
    <string name="hold_to_edit">Przytrzymaj, aby edytować</string>
    <string name="separator">\ \u2022 \ </string>
    <string name="semester">Semestr %1$d</string>
    <string name="semester_with_colon">Semestr: %1$d</string>
    <string name="final_average">Średnia końcowa: %1$.2f</string>
    <string name="belt">PASEK</string>
    <string name="number_of_notes">Ilość notatek: %1$d</string>
    <string name="number_of_unpreparedness">NP: %1$d</string>
    <string name="delete">Usuń</string>
    <string name="notes">Notatki</string>
    <string name="edit">Edytuj</string>
    <string name="next">Kolejny</string>
    <string name="next_new">Nowy</string>
    <string name="cant_save">Nie można zapisać</string>
    <string name="all">Wszystkie</string>
    <string name="selected_item">Zaznaczone elementy: %1$d</string>
    <string name="add_subject">Przedmiot</string>
    <string name="add_lesson_plan">Plan lekcji</string>
    <string name="add_note">Notatke</string>
    <string name="add_assessment">Ocene</string>
    <string name="notepad">Notatnik</string>
    <string name="add_subject_title">Dodaj przedmiot</string>
    <string name="enter_subject_name">Wpisz nazwe przedmiotu</string>
    <string name="enter_subject_teacher">Wpisz nauczyciela przedmiotu</string>
    <string name="enter_unpreparedness">Wpisz ilość nieprzygotowań</string>
    <string name="enter_subject_description">Wpisz dowolne informacje na temat przedmiotu</string>
    <string name="add_element_of_lesson_plan_title">Dodaj pozycje w planie lekcji</string>
    <string name="plan_edit_hint_subject">Wybierz przedmiot</string>
    <string name="plan_edit_null_subject">Nie masz jeszcze przedmiotów\nBy dodać plan, cofnij się i utwórz przedmiot</string>
    <string name="plan_edit_start_lesson">Początek lekcji</string>
    <string name="plan_edit_end_lesson">Koniec lekcji</string>
    <string name="plan_edit_hint_classroom">Wpisz klasę w której odbędą się zajęcia</string>
    <string name="select_day_hint">Wybierz dzień</string>
    <string name="monday">Poniedziałek</string>
    <string name="tuesday">Wtorek</string>
    <string name="wednesday">Środa</string>
    <string name="thursday">Czwartek</string>
    <string name="friday">Piątek</string>
    <string name="saturday">Sobota</string>
    <string name="sunday">Niedziela</string>
    <string name="not_in_plan">Brak w planie</string>
    <string name="today">Dziś</string>
    <string name="tomorrow">Jutro</string>
    <string name="in_a_week">Za tydzień</string>
    <string-array name="week">
        <item>@string/select_day_hint</item>
        <item>@string/monday</item>
        <item>@string/tuesday</item>
        <item>@string/wednesday</item>
        <item>@string/thursday</item>
        <item>@string/friday</item>
        <item>@string/saturday</item>
        <item>@string/sunday</item>
    </string-array>
    <string name="cant_delete_default_assessments_category">Nie można usunąć domyślnej kategorii</string>
    <string name="settings_theme">Motyw aplikacji</string>
    <string name="settings_assessment">Oceny</string>
    <string name="settings_delete">Usuń</string>
    <string name="settings_fast">Szybkie</string>
    <string name="settings_features">Funkcje</string>
    <string name="settings_download">Internet</string>
    <string name="title_theme">Wybierz motyw</string>
    <string name="theme_light">Jasny</string>
    <string name="theme_dark">Ciemny</string>
    <string name="theme_battery">Według oszczędzania baterii</string>
    <string name="theme_system">Według systemu</string>
    <string name="title_hard_dark_mode">Bardzo ciemny motyw</string>
    <string name="summary_hard_dark_mode">Jeśli ciemny motyw jest włączony, czarny jest bardziej czarny. Idealny dla wyświetlaczy OLED/AMOLED.</string>
    <string name="title_average_to_belt">Pasek od</string>
    <string name="title_average_weight">Średnia ważona</string>
    <string name="summary_average_weight">Umożliwia dodawanie wagi do ocen</string>
    <string name="title_average_to_assessment">Średnie na oceny</string>
    <string name="summary_average_to_assessment">Przeliczaj średnie przedmiotów na oceny</string>
    <string name="title_average_to_six">Szóstka od</string>
    <string name="title_average_to_five">Piątka od</string>
    <string name="title_average_to_four">Czwórka od</string>
    <string name="title_average_to_three">Trójka od</string>
    <string name="title_average_to_two">Dwójka od</string>
    <string name="title_lesson_plan">Plan lekcji</string>
    <plurals name="summary_lesson_plan">
        <item quantity="one">%d pozycja</item>
        <item quantity="few">%d pozycje</item>
        <item quantity="many">%d pozycji</item>
    </plurals>
    <string name="in_lesson_plan">w planie lekcji</string>
    <string name="done_delete_lesson_plan">Usunąłeś plan lekcji</string>
    <string name="title_notes">@string/notes</string>
    <plurals name="summary_all_notes">
        <item quantity="one">%d notatka</item>
        <item quantity="few">%d notatki</item>
        <item quantity="many">%d notatek</item>
    </plurals>
    <string name="done_delete_all_notes">Usunąłeś wszystkie notatki</string>
    <string name="title_assessments">Oceny</string>
    <plurals name="summary_all_assessments">
        <item quantity="one">%d ocena</item>
        <item quantity="few">%d oceny</item>
        <item quantity="many">%d ocen</item>
    </plurals>
    <string name="done_delete_all_assessments">Usunąłeś wszystkie oceny</string>
    <string name="title_subjects">Przedmioty</string>
    <plurals name="summary_all_subejcts">
        <item quantity="one">%d przedmiot w tym</item>
        <item quantity="few">%d przedmioty w tym</item>
        <item quantity="many">%d przedmiotów w tym</item>
    </plurals>
    <string name="done_delete_all_subjects">Usunąłeś wszystkie przedmioty</string>
    <string name="del_question">Czy chcesz usunąć %1$s?</string>
    <string name="title_semester">Semestr</string>
    <string name="semester_first">Pierwszy</string>
    <string name="semester_second">Drugi</string>
    <string name="title_assessment_window">Okno edycji oceny</string>
    <string name="summary_assessment_window">Pokaż okno po dodaniu nowej oceny</string>
    <string name="title_hold_edit_text_help_icon">Ikona pomocnicza edycji</string>
    <string name="summary_hold_edit_text_help_icon">Wyświetlaj ikone obok elementów które można edytować przez przytrzymanie</string>
    <string name="semester1">Semestr 1</string>
    <string name="teacher">Nauczyciel</string>
    <string name="section_assessments">Oceny:</string>
    <string name="assessment_hint">Wpisz ocene</string>
    <string name="assessment_weight_hint">Wpisz wage (1)</string>
    <string name="unpreparedness">Nieprzygotowania</string>
    <string name="unpreparedness_current">Aktualne nieprzygotowania</string>
    <string name="unpreparedness_start">Domyślne nieprzygotowania</string>
    <string name="section_description">Opis:</string>
    <string name="description">Opis</string>
    <string name="description_hint">Wpisz dowolne informacje</string>
    <string name="show_add_assessment_fragment_after_add">Pokaż okno po dodaniu oceny</string>
    <string name="assessment">Ocena</string>
    <string name="weight">Waga</string>
    <string name="title">Tytuł</string>
    <string name="title_hint">Wpisz tytuł</string>
    <string name="note_content">Treść</string>
    <string name="note_content_hint">Wpisz treść</string>
</resources>