<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsAndEditActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <pl.Guzooo.DziennikUcznia.TextAndHoldEditView
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/length_minimal"
            app:info="@string/teacher"
            app:hint="@string/hint_teacher"
            android:layout_margin="@dimen/margin_standard"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/section_assessments"
            android:layout_marginLeft="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            style="@style/AppTheme.TitleBig"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end">

            <EditText
                android:id="@+id/assessment"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="@dimen/length_minimal"
                android:hint="@string/assessment_hint"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:inputType="numberDecimal"/>

            <EditText
                android:id="@+id/assessment_weight"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:minHeight="@dimen/length_minimal"
                android:hint="@string/assessment_weight_hint"
                android:layout_marginEnd="@dimen/margin_standard"
                android:layout_marginRight="@dimen/margin_standard"
                android:inputType="number"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@android:drawable/ic_input_add"
                android:onClick="ClickPlusAssessment"
                style="@style/Button"/>
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/assessments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/unpreparedness_titles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unpreparedness_current"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                style="@style/AppTheme.TitleBig"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unpreparedness_start"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"
                style="@style/AppTheme.TitleBig"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_standard"
            android:animateLayoutChanges="true">

            <pl.Guzooo.DziennikUcznia.TextAndHoldEditView
                android:id="@+id/unpreparedness"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/length_minimal"
                android:layout_weight="1"
                app:prefix="@string/unpreparedness"
                app:info="@string/unpreparedness_full"
                app:hint="@string/edit_hint_unpreparedness"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"/>

            <EditText
                android:id="@+id/unpreparedness_start_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/hint_unpreparedness"
                android:layout_marginStart="@dimen/margin_standard"
                android:layout_marginEnd="@dimen/margin_standard"/>

            <Button
                android:id="@+id/unpreparedness_del_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/details_minus_unpreparedness"
                android:onClick="ClickMinusUnpreparedness"
                style="@style/Button"/>
        </LinearLayout>

        <TextView
            android:id="@+id/description_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_description"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            style="@style/AppTheme.TitleBig"/>

        <pl.Guzooo.DziennikUcznia.TextAndHoldEditView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/length_minimal"
            app:info="@string/description"
            app:hint="@string/description_hint"
            android:layout_marginTop="@dimen/margin_standard"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"/>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>