<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:orderInCategory="98"
        app:showAsAction="always"
        android:title="@string/menu_share" />

    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/pin"
        android:orderInCategory="99"
        app:showAsAction="always"
        android:iconTint="@android:color/darker_gray"
        android:title="@string/note_action_pin"/>

    <item
        android:id="@+id/action_trash"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:title="@string/delete" />

</menu>