<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:inputType="textCapWords"
            android:hint="@string/enter_subject_name"
            style="@style/AllClickable"/>

        <EditText
            android:id="@+id/teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:inputType="textCapWords"
            android:hint="@string/enter_subject_teacher"
            style="@style/AllClickable"/>

        <EditText
            android:id="@+id/unpreparedness"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_standard"
            android:layout_marginEnd="@dimen/margin_standard"
            android:layout_marginTop="@dimen/margin_standard"
            android:inputType="number"
            android:hint="@string/enter_unpreparedness"
            style="@style/AllClickable"/>

        <EditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_standard"
            android:inputType="textMultiLine|textCapSentences"
            android:hint="@string/enter_subject_description"
            style="@style/AllClickable"/>
    </LinearLayout>
</ScrollView>