<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LessonPlanEditActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/plan_edit_subject"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="@dimen/minimum_length"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/plan_edit_day"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:minHeight="@dimen/minimum_length"
                    android:layout_weight="1"/>
            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plan_edit_start_lesson"
                        android:layout_weight="1"
                        android:gravity="center"
                        style="@style/AppTheme.Title"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/plan_edit_end_lesson"
                        android:layout_weight="1"
                        android:gravity="center"
                        style="@style/AppTheme.Title"/>
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TimePicker
                        android:id="@+id/plan_edit_time_start"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:timePickerMode="spinner"
                        android:layout_weight="1" />

                    <TimePicker
                        android:id="@+id/plan_edit_time_end"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:timePickerMode="spinner"
                        android:layout_weight="1"/>
                </TableRow>
            </TableLayout>

            <EditText
                android:id="@+id/plan_edit_classroom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/minimum_length"
                android:hint="@string/plan_edit_hint_classroom"
                android:singleLine="true"/>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/plan_edit_save"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ClickSave"
            android:text="@string/add"
            style="@style/AppTheme.Button"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="ClickCancel"
            android:text="@string/cancel"
            style="@style/AppTheme.Button"/>
    </LinearLayout>
</LinearLayout>